# Generated on Tue, 28 Oct 2025 16:05:46 +0000.
#
# This file contains the CMake build info for the RV32IMACFD core architecture.

PROJECT(RV32IMACFD)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH "\$ORIGIN/../../include/jit/etiss/jit")

ADD_LIBRARY(${PROJECT_NAME} SHARED
	RV32IMACFDArch.cpp
	RV32IMACFDArchLib.cpp
	RV32IMACFDArchSpecificImp.cpp
	RV32IMACFDFuncs.c
	RV32IMACFDInstr.cpp
	RV32IMACFD_RV32IInstr.cpp
	RV32IMACFD_RV32ICInstr.cpp
	RV32IMACFD_RV32MInstr.cpp
	RV32IMACFD_RV32FInstr.cpp
	RV32IMACFD_RV32FCInstr.cpp
	RV32IMACFD_RV32DInstr.cpp
	RV32IMACFD_RV32DCInstr.cpp
	RV32IMACFD_ZifenceiInstr.cpp
	RV32IMACFD_tum_csrInstr.cpp
	RV32IMACFD_tum_retInstr.cpp
	RV32IMACFD_RV32AInstr.cpp
	RV32IMACFD_tum_rvaInstr.cpp
	RV32IMACFD_tum_semihostingInstr.cpp
)

add_custom_command(
	TARGET ${PROJECT_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy
		"${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h"
		"${ETISS_BINARY_DIR}/include/jit/Arch/${PROJECT_NAME}"
)
INSTALL(FILES "${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h" DESTINATION "include/jit/Arch/${PROJECT_NAME}")

ETISSPluginArch(${PROJECT_NAME})