# Generated on Sun, 21 Jun 2026 16:57:08 +0000.
#
# This file contains the CMake build info for the RV32IMACFD core architecture.

PROJECT(RV32IMACFD)
FIND_PACKAGE(ETISS)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH "\$ORIGIN/../../include/jit/etiss/jit")

ADD_LIBRARY(${PROJECT_NAME} SHARED
	RV32IMACFDArch.cpp
	RV32IMACFDArchLib.cpp
	RV32IMACFDArchSpecificImp.cpp
	RV32IMACFDFuncs.c
	RV32IMACFDInstr.cpp
	RV32IMACFD_RV32IInstr.cpp
	RV32IMACFD_RV32ICInstr.cpp
	RV32IMACFD_RV32MInstr.cpp
	RV32IMACFD_RV32FInstr.cpp
	RV32IMACFD_RV32FCInstr.cpp
	RV32IMACFD_RV32DInstr.cpp
	RV32IMACFD_RV32DCInstr.cpp
	RV32IMACFD_ZifenceiInstr.cpp
	RV32IMACFD_tum_csrInstr.cpp
	RV32IMACFD_tum_retInstr.cpp
	RV32IMACFD_RV32AInstr.cpp
	RV32IMACFD_tum_rvaInstr.cpp
	RV32IMACFD_tum_semihostingInstr.cpp
)

IF(ETISS_BINARY_DIR)
	ADD_CUSTOM_COMMAND(
		TARGET ${PROJECT_NAME} POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy
			"${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h"
			"${ETISS_BINARY_DIR}/include/jit/Arch/${PROJECT_NAME}"
	)
ENDIF()
INSTALL(FILES "${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h" DESTINATION "include/jit/Arch/${PROJECT_NAME}")

# handle gdbserver xml files
IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/xml")
	ADD_CUSTOM_TARGET(copy_${PROJECT_NAME}_xml ALL
		COMMAND ${CMAKE_COMMAND} -E make_directory
			"${CMAKE_CURRENT_LIST_DIR}/xml"
		COMMAND ${CMAKE_COMMAND} -E copy_directory
			"${CMAKE_CURRENT_LIST_DIR}/xml"
			"${ETISS_BINARY_DIR}/xml/${PROJECT_NAME}"
	)
	ADD_DEPENDENCIES(${PROJECT_NAME} copy_${PROJECT_NAME}_xml)
	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/xml/ DESTINATION xml/${PROJECT_NAME})
ENDIF()

ETISSPluginArch(${PROJECT_NAME})
