# Generated on Thu, 12 May 2022 16:30:21 +0200.
#
# This file contains the CMake build info for the RV32IMACFDPV core architecture.

PROJECT(RV32IMACFDPV)

ADD_LIBRARY(${PROJECT_NAME} SHARED
	RV32IMACFDPVArch.cpp
	RV32IMACFDPVArchLib.cpp
	RV32IMACFDPVArchSpecificImp.cpp
	RV32IMACFDPVInstr.cpp
	RV32IMACFDPV_RISCVBaseInstr.cpp
	RV32IMACFDPV_RV32IInstr.cpp
	RV32IMACFDPV_RV32ICInstr.cpp
	RV32IMACFDPV_RV32MInstr.cpp
	RV32IMACFDPV_ZicsrInstr.cpp
	RV32IMACFDPV_RV32FInstr.cpp
	RV32IMACFDPV_RV32FCInstr.cpp
	RV32IMACFDPV_RV32DInstr.cpp
	RV32IMACFDPV_RV32DCInstr.cpp
	RV32IMACFDPV_RV32PInstr.cpp
	RV32IMACFDPV_RV32VInstr.cpp
	RV32IMACFDPV_ZifenceiInstr.cpp
	RV32IMACFDPV_tum_csrInstr.cpp
	RV32IMACFDPV_tum_retInstr.cpp
	RV32IMACFDPV_RV32AInstr.cpp
	RV32IMACFDPV_tum_rvaInstr.cpp
)

INSTALL(FILES "${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h" DESTINATION "include/jit/Arch/${PROJECT_NAME}")

ETISSPluginArch(${PROJECT_NAME})