# Generated on Wed, 19 Jun 2024 07:44:30 +0200.
#
# This file contains the CMake build info for the RV32IMACFDPV core architecture.

PROJECT(RV32IMACFDPV)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH "\$ORIGIN/../../include/jit/etiss/jit")

ADD_LIBRARY(${PROJECT_NAME} SHARED
	RV32IMACFDPVArch.cpp
	RV32IMACFDPVArchLib.cpp
	RV32IMACFDPVArchSpecificImp.cpp
	RV32IMACFDPVFuncs.c
	RV32IMACFDPVInstr.cpp
	RV32IMACFDPV_RV32IInstr.cpp
	RV32IMACFDPV_RV32ICInstr.cpp
	RV32IMACFDPV_RV32MInstr.cpp
	RV32IMACFDPV_RVZve32xInstr.cpp
	RV32IMACFDPV_RVZve64xInstr.cpp
	RV32IMACFDPV_RVZve32fInstr.cpp
	RV32IMACFDPV_RV32FInstr.cpp
	RV32IMACFDPV_RV32FCInstr.cpp
	RV32IMACFDPV_RV32DInstr.cpp
	RV32IMACFDPV_RV32DCInstr.cpp
	RV32IMACFDPV_ZifenceiInstr.cpp
	RV32IMACFDPV_tum_csrInstr.cpp
	RV32IMACFDPV_tum_retInstr.cpp
	RV32IMACFDPV_RV32AInstr.cpp
	RV32IMACFDPV_tum_rvaInstr.cpp
	RV32IMACFDPV_tum_semihostingInstr.cpp
)

add_custom_command(
	TARGET ${PROJECT_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy
		"${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h"
		"${ETISS_BINARY_DIR}/include/jit/Arch/${PROJECT_NAME}"
)
INSTALL(FILES "${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Funcs.h" DESTINATION "include/jit/Arch/${PROJECT_NAME}")

ETISSPluginArch(${PROJECT_NAME})